force-app/main/default/objects/MiningRoster__c/MiningRoster__c.object-meta.xml
<CustomObject>
    <description>Near junction of which employee miners are working which mining sites.</description>
    <label>Mining Roster</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mining Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>