force-app/main/default/objects/MiningRoster__c/fields/Miner__c.field-meta.xml
<CustomField>
    <fullName>Miner__c</fullName>
    <description>The miner associated with site</description>
    <label>Miner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mining Rosters</relationshipLabel>
    <relationshipName>Mining_Rosters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>