force-app/main/default/objects/MiningRoster__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>The mining site</description>
    <label>Site</label>
    <referenceTo>MiningSite__c</referenceTo>
    <relationshipLabel>Mining Rosters</relationshipLabel>
    <relationshipName>Mining_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>