force-app/main/default/objects/MiningRoster__c/validationRules/Force_Future_Expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Future_Expiry</fullName>
    <active>true</active>
    <description>Do not let expiration date be set to the past from point of record creation.</description>
    <errorConditionFormula>DATEVALUE(Expiration_Date__c) &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration date must be set at some day in the future.</errorMessage>
</ValidationRule>