force-app/main/default/objects/MiningRoster__c/listViews/Non_Expired.listView-meta.xml
<ListView>
    <fullName>Non_Expired</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <label>Non-Expired</label>
</ListView>